# prismage-data-chat-engine

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml  requirements.txt
adapters/: __init__.py  database.py  embeddings.py  llm.py
api/: __init__.py  chatbot.py
chart-preview/: README.md  angular.json  package-lock.json  package.json
chart-preview/src/: index.html
config/metadata/: business_rules.json  dimensions.json  formulas.json  metrics.json  tables.json
config/prompts/: nl_response.json  query_generator.json  question_parser.json
docs/: DESIGN.md
dynamic-embeddings/: .env.example  LICENSE  README.md  SETUP.md  build_collection_metadata.py  cli_demo.py  create_collection_metadata_table.py  create_collection_metadata_table.sh  delete_namespace.py  drop_collection_metadata_table.py  drop_indexes_by_pattern.py  drop_orphaned_indexes.py  migrate_namespace.py  pyproject.toml  run_examples.sh  show_collection_metadata.py  test_collection_manager.py  test_interactive_qa.py  test_json_embeddings_loader.py  test_llm_service.py
dynamic-embeddings/config/: advertising.json  analytics.json  business.json  configuration.json  custom_sample.json  default.json  ecommerce.json  iot.json  revenue_mgmt.json
dynamic-embeddings/docs/: architecture_and_source_code.md  custom_configurations.md  vector_storage_and_namespaces.md
dynamic-embeddings/examples/: complete_system_demo.py  config_examples.json  configuration_usage.py  custom_config_examples.py  decision_engine_usage.py  jsondoc_embeddingchunk_textconvertor_demo.py  vector_embeddings_pipeline_demo.py
dynamic-embeddings/src/dynamic_embeddings/: __init__.py
dynamic-embeddings/src/dynamic_embeddings/analyzers/: __init__.py  base.py  content.py  structure.py
dynamic-embeddings/src/dynamic_embeddings/config/: __init__.py  analyzer_config.py  database.py  engine.py  settings.py
dynamic-embeddings/src/dynamic_embeddings/core/: __init__.py  dynamic_engine.py
dynamic-embeddings/src/dynamic_embeddings/database/: __init__.py  connection.py  migration.py  schema.py
dynamic-embeddings/src/dynamic_embeddings/engine/: __init__.py  decision_engine.py
dynamic-embeddings/src/dynamic_embeddings/models/: __init__.py  embedding_chunk.py
dynamic-embeddings/src/dynamic_embeddings/pipelines/: __init__.py  embedding_pipeline.py
dynamic-embeddings/src/dynamic_embeddings/processors/: __init__.py  document_processor.py  text_converter.py
dynamic-embeddings/src/dynamic_embeddings/services/: __init__.py  collection_metadata_service.py  embedding_service.py  llm_service.py  vector_store.py
dynamic-embeddings/src/dynamic_embeddings/strategies/: __init__.py  base_strategy.py  dimensional_strategy.py  flat_strategy.py  hierarchical_strategy.py  hybrid_strategy.py  semantic_strategy.py
engine/: __init__.py
engine/capabilities/: base.py
engine/chains/: __init__.py  chatbot_chain.py  embedding_chain.py
engine/charting/: chart_generator.py  vega_types.yaml
engine/embedding/: __init__.py  analyzer.py  collection_finder.py  date_utils.py  orchestrator.py  question_parser.py  searcher.py  synthesizer.py
engine/metadata/: __init__.py  embedding_store.py  loader.py  registry.py  validator.py
engine/pipeline/: __init__.py  nl_responder.py  query_builder.py  query_executor.py  question_parser.py  result_merger.py
engine/plugins/: loader.py  registry.py
engine/prompts/: __init__.py  prompt_builder.py  prompt_library.py
engine/query/: __init__.py  builder.py  embedding_router.py  formula_engine.py  having_engine.py  router.py
engine/rules/: __init__.py  engine.py
engine/tools/: __init__.py
models/: __init__.py  intent.py  metadata.py  query.py
tests/: test_metadata_loader.py  test_pipeline.py  test_query_builder.py  test_rules_engine.py
(+34 files in other folders)
