[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismage-data-chat-engine"
version = "0.1.0"
description = "Metadata-driven, domain-agnostic natural language data chatbot engine"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Adhir Potdar", email = "adhir.potdar@isanasystems.com" }]
keywords = ["nlp", "sql", "chatbot", "langchain", "langsmith", "metadata", "data-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langsmith>=0.1.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
prismage = "api.chatbot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "adapters*", "models*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
